--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - qdrant
       - elasticsearch
     volumes:
+      - ./data:/app/data
       - ./result:/app/result
     command: ["python", "retrieve.py"]
 
