--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./result:/app/result
-    command: ["python", "retrieve.py"]
+    command: /bin/bash -c "python get_qdrant_embeds.py && python ingest_data.py && python retrieve.py"
 
 volumes:
   qdrant_storage:
